// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not warn when valid values are passed for the content property 1`] = `
.emotion-0 {
  content: normal;
  content: none;
  content: open-quote;
  content: close-quote;
  content: no-open-quote;
  content: no-close-quote;
  content: initial;
  content: inherit;
  content: "some thing";
  content: 'another thing';
  content: var(--variable-name);
  content: url("http://www.example.com/test.png");
  content: linear-gradient(hotpink, #8be9fd);
  content: radial-gradient(hotpink, #8be9fd);
  content: repeating-linear-gradient(hotpink, #8be9fd);
  content: repeating-radial-gradient(hotpink, #8be9fd);
  content: conic-gradient(hotpink, #8be9fd);
  content: counter(chapter_counter);
  content: counters(section_counter, ".");
  content: attr(value string);
  content: open-quote counter(chapter_counter);
  content: element(name);
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does not warn when using the flag on a rule that is defined in another one 1`] = `
.emotion-0 div span:first-child {
  border-bottom-left-radius: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does not warn when using the flag on the rule that follows a declaration 1`] = `
.emotion-0 {
  color: hotpink;
}

.emotion-0>*:first-child {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does not warn when using the flag on the rule that follows another rule 1`] = `
.emotion-0>* {
  margin-left: 10px;
}

.emotion-0>*:first-child {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does not warn when using the flag on the rule that preceeds a declaration 1`] = `
.emotion-0 {
  color: hotpink;
}

.emotion-0>*:first-child {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does not warn when using the flag on the rule that preceeds another rule 1`] = `
.emotion-0>*:first-child {
  margin-left: 0;
}

.emotion-0>* {
  margin-left: 10px;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does warn when not using the flag on a rule that is defined in another one 1`] = `
.emotion-0 div span:first-child {
  border-bottom-left-radius: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does warn when not using the flag on the rule that follows a declaration 1`] = `
.emotion-0 {
  color: hotpink;
}

.emotion-0>*:first-child {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does warn when not using the flag on the rule that follows another rule 1`] = `
.emotion-0>* {
  margin-left: 10px;
}

.emotion-0>*:first-child$ {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does warn when not using the flag on the rule that preceeds a declaration 1`] = `
.emotion-0 {
  color: hotpink;
}

.emotion-0>*:first-child {
  margin-left: 0;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ does warn when not using the flag on the rule that preceeds another rule 1`] = `
.emotion-0>*:first-child {
  margin-left: 0;
}

.emotion-0>* {
  margin-left: 10px;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child :nth-child(3) 1`] = `
.emotion-0:first-child :nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child 1`] = `
.emotion-0:first-child {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child span 1`] = `
.emotion-0:first-child span {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child, :nth-child(3) 1`] = `
.emotion-0:first-child,
:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child, span 1`] = `
.emotion-0:first-child,
.emotion-0 span {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:first-child:nth-child(3) 1`] = `
.emotion-0:first-child:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:not(:first-child) 1`] = `
.emotion-0:not(:first-child) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:not(:nth-child(3)) 1`] = `
.emotion-0:not(:nth-child(3)) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:nth-child(3) 1`] = `
.emotion-0:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with object styles &:nth-last-child(7) 1`] = `
.emotion-0:nth-last-child(7) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child :nth-child(3) 1`] = `
.emotion-0:first-child :nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child 1`] = `
.emotion-0:first-child {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child span 1`] = `
.emotion-0:first-child span {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child, :nth-child(3) 1`] = `
.emotion-0:first-child,
:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child, span 1`] = `
.emotion-0:first-child,
.emotion-0 span {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:first-child:nth-child(3) 1`] = `
.emotion-0:first-child:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:not(:first-child) 1`] = `
.emotion-0:not(:first-child) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:not(:nth-child(3)) 1`] = `
.emotion-0:not(:nth-child(3)) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:nth-child(3) 1`] = `
.emotion-0:nth-child(3) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes does not warn when using with flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ with string styles &:nth-last-child(7) 1`] = `
.emotion-0:nth-last-child(7) {
  color: rebeccapurple;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes warns when using without flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ "&:first-child" 1`] = `
.emotion-0:first-child {
  color: hotpink;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes warns when using without flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ "&:not(:first-child)" 1`] = `
.emotion-0:not(:first-child) {
  color: hotpink;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes warns when using without flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ "&:not(:nth-child(3))" 1`] = `
.emotion-0:not(:nth-child(3)) {
  color: hotpink;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes warns when using without flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ "&:nth-child(3)" 1`] = `
.emotion-0:nth-child(3) {
  color: hotpink;
}

<div
  class="emotion-0"
/>
`;

exports[`unsafe pseudo classes warns when using without flag: /* emotion-disable-server-rendering-unsafe-selector-warning-please-do-not-use-this-the-warning-exists-for-a-reason */ "&:nth-last-child(7)" 1`] = `
.emotion-0:nth-last-child(7) {
  color: hotpink;
}

<div
  class="emotion-0"
/>
`;
